fixed small mistake in m6 clip1

--- a/02-Building-Simple-Apollo-Server/clip03-Build-Apollo-Server-TypeDefs/ApolloServer/package.json
+++ b/02-Building-Simple-Apollo-Server/clip03-Build-Apollo-Server-TypeDefs/ApolloServer/package.json
@@ -8,7 +8,7 @@
   },
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "echo \"Place holder for build. No Action taken here\""
   },
   "keywords": [],
   "author": "",
